--- a/templates/saindo-snake.html
+++ b/templates/saindo-snake.html
@@ -10,7 +10,7 @@
     <div class="wallpaper-snake">
         <div class="voltar-quero-snake">
             <div class="thank-snake"><img src="/icon/obrigado-game.png"></div>
-            <a href="inicio-snake.html" class="quero-game">Voltar</a>
+            <a href="index.html" class="quero-game">Voltar</a>
         </div>
     </div>
 </body>
