--- a/templates/terceiro-snake.html
+++ b/templates/terceiro-snake.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="wallpaper-snake">
-        <div class="voltar-quero-snake">
-            <div class="thank-snake"><img src="/icon/obrigado-game.png"></div>
-            <a href="/index.html" class="quero-game">Vamos começar o jogo</a>
+        <div class="capa-snake">
+            <div class="tema-snake"><img src="/icon/snake-game.png"></div>
+            <a href="menu-3-snake.html" class="play-snake">Play</a>
         </div>
     </div>
 </body>
