--- a/templates/fase-3-snake.html
+++ b/templates/fase-3-snake.html
@@ -107,7 +107,7 @@
                 <div class="s-snake"><img src="/icon/score-7.png"></div>
                 <div class="opcao-snake">
                     <a href="fase-3-snake.html" class="fechar-green-snake">Jogar Novamente</a>
-                    <a href="saindo-snake.html" class="parabens-snake">Fim</a>
+                    <a href="menu-3-snake.html" class="parabens-snake">Fim</a>
                 </div>
             </div>
         </div>
