--- a/templates/menu-2-snake.html
+++ b/templates/menu-2-snake.html
@@ -14,7 +14,7 @@
                 <a href="fase-1-snake.html" class="fase-snake"><img src="/icon/fase-1.png"></a>
                 <a href="fase-2-snake.html" class="fase-snake"><img src="/icon/fase-2.png"></a>
                 <a href="#" class="fase-snake"><img src="/icon/bloqueio.png"></a>
-                <a href="/templates/segundo-snake.html" class="voltar-snake">Voltar</a>
+                <a href="segundo-snake.html" class="voltar-snake">Voltar</a>
                 <a href="#" class="creditos-snake" onclick="abrirModal()">Créditos</a>
                 <a href="#" class="sair-snake" onclick="sairModal()">Sair</a>
             </div>
