--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
     text-transform: uppercase;
     cursor: pointer;
     margin-top: 55px;
-    border: none;
+    border: 5px solid #ffffffea;
     outline: none;
 }
 .play-snake:hover {
@@ -591,7 +591,7 @@
 }
 .excluir-snake {
     font-family: 'Luckiest Guy', cursive;
-    background-color: #BB1D1D;
+    background-color: #247D38;
     border-radius: 10px;
     border: 3px solid #000000;
     cursor: pointer;
