--- a/templates/fase-3-snake.html
+++ b/templates/fase-3-snake.html
@@ -25,7 +25,7 @@
                         <div class="f-snake"><img src="/icon/fase-11.png" draggable="true" id="arrow-left" ondragstart="drag(event)"></div>
                         <div class="f-snake"><img src="/icon/fase-12.png" draggable="true" id="arrow-up" ondragstart="drag(event)"></div>
                     </div>
-                    <button class="excluir-snake" id="excluir-snake" draggable="true"><i class="fa-regular fa-trash-can"></i></button> 
+                    <button class="excluir-snake" id="excluir-snake" draggable="true"><i class="fa-solid fa-rotate-right"></i></button> 
                 </div>
 
             </div>
